--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <div class="p-feedback-form-radio">
           <label class="p-feedback-radio-group">
             <span class="p-feedback-radio-label">Вы подписаны на e-mail рассылку?</span>
-            <input type="radio" class="radio" name="p-feedback-radio-group" value="yes" checked />
+            <input type="radio" class="radio" name="p-feedback-radio-group" value="yes" checked>
             <span class="p-feedback-radio-group-text">Да</span>
           </label>
           <label class="p-feedback-radio-group">
-            <input type="radio" class="radio" name="p-feedback-radio-group" value="no" />
+            <input type="radio" class="radio" name="p-feedback-radio-group" value="no">
             <span class="p-feedback-radio-group-text">Нет</span>
           </label>
         </div>
@@ -42,7 +42,7 @@
             <span class="p-feedback-droup-option-label">Расскажите какой контент вы хотели бы видеть на нашем сайте?</span>
             <textarea class="p-feedback-field-opinion" placeholder="Может, больше рецептов?" name="поле для ввода рецептов"></textarea>
           </label>
-          <button class="p-feedback-button" alt="кнопка отправить">
+          <button class="p-feedback-button" name="кнопка отправить">
             отправить
           </button>
         </div>
@@ -343,7 +343,7 @@
           <form class="search">
             <label class="search-group">
               <span class="hidden">Поле ввода</span>
-              <input class="search-field" placeholder="Найти..." alt="поле поиска">
+              <input class="search-field" type="search" placeholder="Найти..." alt="поле поиска">
             </label>
             <button class="search-button" type="button" name="Кнопка поиска">
             </button>
@@ -353,7 +353,7 @@
           <h2 class="aside-title">рассылка</h2>
           <form class="mailing-form">
             <label class="mailing-group">
-              <input class="mailing-field" placeholder="Ваш email-адрес" alt="поле для ввода почты">
+              <input class="mailing-field" type="email" placeholder="Ваш email-адрес" alt="поле для ввода почты">
               <span class="visually-hidden">укажите почту</span>
             </label>
             <button class="mailing-button" name="кнопка подписаться">подписаться</button>
@@ -430,7 +430,7 @@
       <div class="shop-container">
         <div class="shop-item">
           <div class="shop-img">
-            <img src="images/shop-item-desk1.jpg" alt="Подушки на диван" />
+            <img src="images/shop-item-desk1.jpg" alt="Подушки на диван">
           </div>
           <div class="shop-desc">
             <h3 class="shop-desc-title">Подушки на диван</h3>
@@ -450,7 +450,7 @@
         </div>
         <div class="shop-item">
           <div class="shop-img">
-            <img src="images/shop-item-desk2.jpg" alt="Кукла «Зайчик»" />
+            <img src="images/shop-item-desk2.jpg" alt="Кукла «Зайчик»">
           </div>
           <div class="shop-desc">
             <h3 class="shop-desc-title">Кукла «Зайчик»</h3>
@@ -470,7 +470,7 @@
         </div>
         <div class="shop-item">
           <div class="shop-img">
-            <img src="images/shop-item-desk3.jpg" alt="Шестиугольная рамка" />
+            <img src="images/shop-item-desk3.jpg" alt="Шестиугольная рамка">
           </div>
           <div class="shop-desc">
             <h3 class="shop-desc-title">Шестиугольная рамка</h3>
