--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
           <form class="search">
             <label class="search-group">
               <span class="hidden">Поле ввода</span>
-              <input class="search-field" type="search" placeholder="Найти..." alt="поле поиска">
+              <input class="search-field" type="search" placeholder="Найти..." name="поле поиска">
             </label>
             <button class="search-button" type="button" name="Кнопка поиска">
             </button>
@@ -353,7 +353,7 @@
           <h2 class="aside-title">рассылка</h2>
           <form class="mailing-form">
             <label class="mailing-group">
-              <input class="mailing-field" type="email" placeholder="Ваш email-адрес" alt="поле для ввода почты">
+              <input class="mailing-field" type="email" placeholder="Ваш email-адрес" name="поле для ввода почты">
               <span class="visually-hidden">укажите почту</span>
             </label>
             <button class="mailing-button" name="кнопка подписаться">подписаться</button>
